[package]
name = "mantis-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = { version = "0.8.3", features = ["serde"] }
bincode = "2.0.0-rc.3"
cqfrs = { git = "https://github.com/jaranzie/cqfrs", branch = "single_threaded" }
parking_lot = "0.12.1"
serde = { version = "1.0.188", features = ["derive"] }
tracing = "0.1.37"
